--- a/templates/parent.html
+++ b/templates/parent.html
@@ -154,13 +154,13 @@
 
                 {% if DEPLOYMENT_TARGET != 'staging' %}
                 <div class="segment">
-                    <a class="btn staging" href="http://stage-apps.npr.org/dailygraphics/graphics/{{ slug }}/" target="_blank">staging &raquo;</a>
+                    <a class="btn staging" href="{{ STAGING_S3_URL }}/{{ slug }}/" target="_blank">staging &raquo;</a>
                 </div>
                 {% endif %}
 
                 {% if DEPLOYMENT_TARGET != 'production' %}
                 <div class="segment">
-                    <a class="btn production" href="http://apps.npr.org/dailygraphics/graphics/{{ slug }}/" target="_blank">production &raquo;</a>
+                    <a class="btn production" href="{{ PRODUCTION_S3_URL }}/{{ slug }}/" target="_blank">production &raquo;</a>
                 </div>
                 {% endif %}
 
@@ -182,82 +182,13 @@
             </div>
         </div>
 
-        <h2><span class="production">Production</span> embed code (for Seamus)</h2>
+        <h2><span class="production">Production</span> autoinit embed code (<a href="http://blog.apps.npr.org/2014/12/19/pym-core-publisher.html">help getting started with pym</a>)</h2>
 
 <!-- textarea contents -->
-    <textarea readonly="readonly" rows="10" cols="50">
-<div id="responsive-embed-{{ slug }}"></div>
-<script type="text/javascript">
-    // Require.js is on the page (new Seamus)
-    if (typeof requirejs !== 'undefined') {
-        // Create a local require.js namespace
-        var require_{{ var_name }} = requirejs.config({
-            context: '{{ slug }}',
-            paths: {
-                'pym': 'http://apps.npr.org/dailygraphics/graphics/{{ slug }}/js/lib/pym'
-            },
-    		shim: {
-    			'pym': { exports: 'pym' }
-    		}
-        });
-
-        // Load pym into locale namespace
-        require_{{ var_name }}(['require', 'pym'], function (require, Pym) {
-            // Create pym parent
-            var pymParent = new Pym.Parent(
-                'responsive-embed-{{ slug }}',
-                'http://apps.npr.org/dailygraphics/graphics/{{ slug }}/child.html',
-                {}
-            );
-
-            // Unbind events when the page changes
-            document.addEventListener('npr:pageUnload', function (e) {
-                // Unbind *this* event once its run once
-                e.target.removeEventListener(e.type, arguments.callee);
-
-                // Pym versions with "remove"
-                if (typeof pymParent.remove == 'function') {
-                    pymParent.remove();
-                // Pym version without "remove"
-                } else {
-                    // Unbind pym events
-                    window.removeEventListener('message', pymParent._processMessage);
-                    window.removeEventListener('resize', pymParent._onResize);
-                }
-
-                // Explicitly unload pym library
-                require_{{ var_name }}.undef('pym');
-                require_{{ var_name }} = null;
-            })
-        });
-    // Require.js is not on the page, but jQuery is (old Seamus)
-    } else if (typeof $ !== 'undefined' && typeof $.getScript === 'function') {
-        // Load pym
-        $.getScript('http://apps.npr.org/dailygraphics/graphics/{{ slug }}/js/lib/pym.js').done(function () {
-            // Wait for page load
-            $(function () {
-                // Create pym parent
-                var pymParent = new pym.Parent(
-                    'responsive-embed-{{ slug }}',
-                    'http://apps.npr.org/dailygraphics/graphics/{{ slug }}/child.html',
-                    {}
-                );
-            });
-        });
-    // Neither require.js nor jQuery are on the page
-    } else {
-        console.error('Could not load {{ slug }}! Neither require.js nor jQuery are on the page.');
-    }
-</script>
-    </textarea>
-<!-- end textarea contents -->
-
-        <h2><span class="production">Production</span> autoinit embed code (<a href="http://blog.apps.npr.org/2014/12/19/pym-core-publisher.html">for member stations</a>)</h2>
-
-<!-- textarea contents -->
-    <textarea readonly="readonly" rows="10" cols="50">
-<p data-pym-src="http://{{ PRODUCTION_S3_BUCKET['bucket_name'] }}/{{ PROJECT_SLUG }}/graphics/{{ slug }}/child.html">&amp;nbsp;</p><script src="http://{{ PRODUCTION_S3_BUCKET['bucket_name'] }}/{{ PROJECT_SLUG }}/graphics/{{ slug }}/js/lib/pym.js" type="text/javascript"></script>
-    </textarea>
+<textarea readonly="readonly" rows="10" cols="50">
+<p data-pym-src="{{ PRODUCTION_S3_URL }}/{{ slug }}/child.html">&amp;nbsp;</p>
+<script src="{{ PRODUCTION_S3_URL }}/{{ slug }}/js/lib/pym.js" type="text/javascript"></script>
+</textarea>
 <!-- end textarea contents -->
 
     </div>
