Revert "update parent template to reflect IEEE Spectrum breakpoints"
This reverts commit 8964246ecafedbfa260084a95113a37b8c2ab6de.

--- a/templates/parent.html
+++ b/templates/parent.html
@@ -136,11 +136,7 @@
         </div>
 
         <div class="segment">
-            <a id="resize-desktop-article" class="btn" href="#">Desktop (620px)</a>
-        </div>
-
-        <div class="segment">
-            <a id="resize-desktop-static" class="btn" href="#">Desktop (940px)</a>
+            <a id="resize-desktop" class="btn" href="#">Desktop (730px)</a>
         </div>
 
         <div class="segment">
@@ -202,8 +198,7 @@
     <script type="text/javascript">
         var resizeSidebarEl = document.querySelector('#resize-sidebar');
         var resizeMobileEl = document.querySelector('#resize-mobile');
-        var resizeArticleEl = document.querySelector('#resize-desktop-article');
-        var resizeStaticEl = document.querySelector('#resize-desktop-static');
+        var resizeDesktopEl = document.querySelector('#resize-desktop');
         var resizeFluidEl = document.querySelector('#resize-fluid');
         var previewWrapperEl = document.querySelector('#preview-wrapper');
 
@@ -225,22 +220,13 @@
             window.location.hash = 'mobile';
         });
 
-        resizeArticleEl.addEventListener('click', function(e) {
+        resizeDesktopEl.addEventListener('click', function(e) {
             e.preventDefault();
 
-            previewWrapperEl.style.width = '620px';
+            previewWrapperEl.style.width = '730px';
             pymParent.sendWidth();
 
-            window.location.hash = 'article';
-        });
-
-        resizeStaticEl.addEventListener('click', function(e) {
-            e.preventDefault();
-
-            previewWrapperEl.style.width = '940px';
-            pymParent.sendWidth();
-
-            window.location.hash = 'static';
+            window.location.hash = 'desktop';
         });
 
         resizeFluidEl.addEventListener('click', function(e) {
@@ -256,10 +242,8 @@
             previewWrapperEl.style.width = '180px';
         } else if (window.location.hash == '#mobile') {
             previewWrapperEl.style.width = '300px';
-        } else if (window.location.hash == '#article') {
-            previewWrapperEl.style.width = '620px';
-        } else if (window.location.hash == '#static') {
-            previewWrapperEl.style.width = '940px';
+        } else if (window.location.hash == '#desktop') {
+            previewWrapperEl.style.width = '730px';
         } else if (window.location.hash == '#fluid') {
             previewWrapperEl.style.width = '100%';
         }
