--- a/templates/parent.html
+++ b/templates/parent.html
@@ -189,10 +189,18 @@
         <h2><span class="production">Production</span> autoinit embed code (<a href="http://blog.apps.npr.org/2014/12/19/pym-core-publisher.html">help getting started with pym</a>)</h2>
 
 <!-- textarea contents -->
-<textarea readonly="readonly" rows="10" cols="50">
+<!-- <textarea readonly="readonly" rows="10" cols="50">
 <p data-pym-src="{{ PRODUCTION_S3_URL }}/{{ slug }}/child.html">&amp;nbsp;</p>
 <script src="{{ PRODUCTION_S3_URL }}/{{ slug }}/js/lib/pym.js" type="text/javascript"></script>
+</textarea> -->
+<textarea readonly="readonly" rows="10" cols="50">
+<div id="{{ slug }}"></div>
+<script src="{{ PRODUCTION_S3_URL }}/{{ slug }}/js/lib/pym.js" type="text/javascript"></script>
+<script type="text/javascript">
+    var pymParent = new pym.Parent("{{ slug }}", "{{ PRODUCTION_S3_URL }}/{{ slug }}/child.html", {});
+</script>
 </textarea>
+
 <!-- end textarea contents -->
 
     </div>
